deploy/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pawmery-user-service
  labels:
    app: pawmery-user
    component: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3010
    protocol: TCP
  selector:
    app: pawmery-user
  sessionAffinity: None
